# UniversalUpdater

./: !cmake.bat  !cmake.sh  .gitignore  CMakeLists.txt  history.txt  resource.qrc  resource.rc  translation.sh
cmake/: FindQtSingleApplication.cmake
share/example/: updater.ini  version.xml
share/translations/: uu_ru.qm  uu_ru.ts
src/: main.cpp
src/core/: abstractupdateconfig.cpp  abstractupdateconfig.h  abstractupdater.cpp  abstractupdater.h  abstractversionnumbering.h  configloader.cpp  configloader.h  core.cpp  core.h  defaultversionnumbering.cpp  defaultversionnumbering.h  productversion.cpp  productversion.h  qtwebupdater.cpp  qtwebupdater.h  qtxmlupdateconfig.cpp  qtxmlupdateconfig.h  settingschangechecker.cpp  settingschangechecker.h  settingschangechecker_p.h  updateconfigfactory.cpp  updateconfigfactory.h  updaterfactory.cpp  updaterfactory.h  updateschecker.cpp  updateschecker.h  updatesmodel.cpp  updatesmodel.h  webupdater.cpp  webupdater.h  xmlupdateconfig.cpp  xmlupdateconfig.h
src/gui/: abstractpreferencewidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  updatedownloaddialog.cpp  updatedownloaddialog.h  updatedownloaddialog.ui  updatepreferencewidget.cpp  updatepreferencewidget.h  updatepreferencewidget.ui  updaterwidget.cpp  updaterwidget.h  updaterwidget.ui
src/utils/: widgetstatesettings.cpp  widgetstatesettings.h
